--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ Description: Lead your online class with style, organization and the most user-f
 Author: The brandiD
 Author URI: https://thebrandid.com/
 
-Version: 2.0.4
+Version: 2.0.5
 
 Tags: block-styles, classes, courses, custom-colors, custom-logo, custom-menu, editor-style, featured-images, footer-widgets, full-width-template, left-sidebar, lifter-lms, membership, one-column, right-sidebar, rtl-language-support, sticky-post, theme-options, threaded-comments, translation-ready, two-columns, wide-blocks
 
@@ -1903,7 +1903,7 @@ body:not(.home) main.content .entry .gform_confirmation_message {
 .site-header,
 .site-header.sticky {
   width: 100%;
-  z-index: 99999;
+  z-index: 99998;
 }
 
 .site-header.sticky {
